# cudakit

./: .gitignore  .python-version  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/scripts/: setup-env.sh
.github/workflows/: tests.yml
cudakit/: ops.py
cudakit/csrc/: muladd.cpp
cudakit/csrc/cuda/: muladd.cu
extension_cpp_stable/: pyproject.toml  setup.py
extension_cpp_stable/extension_cpp_stable/: ops.py
extension_cpp_stable/extension_cpp_stable/csrc/: muladd.cpp
extension_cpp_stable/extension_cpp_stable/csrc/cuda/: muladd.cu
src/cuda/gemm/: gemm.cu  gemm.cuh  kernel_0.cuh  kernel_1.cuh  kernel_2.cuh  kernel_3.cuh  kernel_4.cuh  kernel_5.cuh
src/cuda/utils/: utils.h
test/: test_extension.py
