[build-system]
requires = [
    "setuptools",
    "torch>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cudakit"
version = "0.0.1"
description = "Cudakit: PyTorch C++ and CUDA extensions"
dependencies = [
    "torch>=2.10.0",
    "numpy",
    "cuda-tile",
    "pytest",
    "expecttest"
]
